# applications/RPGTableHelper.WebApi/Dtos/ApiKeys/CreateApiKeyRequestDto.cs
@@ -1,0 +1,7 @@
+namespace RPGTableHelper.WebApi.Dtos.ApiKeys
+{
+    public class CreateApiKeyRequestDto
+    {
+        public string Name { get; set; } = default!;
+    }
+}
