# libraries/RPGTableHelper.DataLayer.Contracts/Models/ApiKeys/CreateApiKeyResponse.cs
@@ -1,0 +1,8 @@
+namespace RPGTableHelper.DataLayer.Contracts.Models.ApiKeys
+{
+    public class CreateApiKeyResponse
+    {
+        public ApiKeyDto ApiKey { get; set; } = default!;
+        public string PlainKey { get; set; } = default!;
+    }
+}
